--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 language: php
 
 php:
-    - 7.1
+  - '5.4'
+  - '5.5'
+  - '5.6'
+  - '7.0'
+  - '7.1'
+  - hhvm
+  - nightly
 
 env:
     - WP_VERSION=latest WP_MULTISITE=0
