--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: php
 
 php:
-  - '5.4'
-  - '5.5'
-  - '5.6'
-  - '7.0'
+#  - '5.4'
+#  - '5.5'
+#  - '5.6'
+#  - '7.0'
   - '7.1'
   - nightly
 
@@ -13,6 +13,6 @@ env:
     - WP_VERSION=latest WP_MULTISITE=1
 
 before_script:
-    - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+    - bash ./bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
-script: phpunit
+script: ./vendor/bin/phpunit
