--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ env:
     - WP_VERSION=latest WP_MULTISITE=0
     - WP_VERSION=latest WP_MULTISITE=1
 
+install:
+  - composer install --no-interaction
+
 before_script:
-    - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+  - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
 script: vendor/bin/phpunit
