--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ php:
 #  - '5.6'
 #  - '7.0'
   - '7.1'
-  - nightly
+#  - nightly
 
 env:
     - WP_VERSION=latest WP_MULTISITE=0
-    - WP_VERSION=latest WP_MULTISITE=1
+#    - WP_VERSION=latest WP_MULTISITE=1
 
 install:
   - composer install --no-interaction
