--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ php:
 
 env:
     - WP_VERSION=latest WP_MULTISITE=0
-#    - WP_VERSION=latest WP_MULTISITE=1
+    - WP_VERSION=latest WP_MULTISITE=1
 
 install:
   - composer install --no-interaction
