--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: php
 
 php:
-#  - '5.4'
-#  - '5.5'
-#  - '5.6'
-#  - '7.0'
+  - 5.3
+  - 5.4
+  - 5.5
+  - 5.6
+  - 7.0
   - '7.1'
-#  - nightly
+  - nightly
 
 env:
     - WP_VERSION=latest WP_MULTISITE=0
