--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
   - 5.6
   - 7.0
   - '7.1'
-  - nightly
+#  - nightly <- it was causing a strange segmentation fault...
 
 env:
     - WP_VERSION=latest WP_MULTISITE=0
